--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -24,4 +24,4 @@ jobs:
           otp-version: 22.2
           elixir-version: 1.9.4
       - run: mix deps.get
-      - run: mix test
+      - run: mix coveralls.json
