--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,3 +25,4 @@ jobs:
           elixir-version: 1.9.4
       - run: mix deps.get
       - run: mix coveralls.json
+      - run: bash <(curl -s https://codecov.io/bash)
